@@ -1,2 +1,1 @@
-Colour conversion fixes between 1.78.1 and 1.78.2
 
